--- a/gb/19/8/23/n11472640.md
+++ b/gb/19/8/23/n11472640.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/havifh3963/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/havifh3963/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/havifh3963/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/havifh3963/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>花五年终成台湾人 瑞莎、马培德医生畅谈心得</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/08/1908230431241487-600x400.jpg" />
 <h6>花五年终成台湾人 ，瑞莎畅谈当时自己坚持的理念，“要当一家人，不要当客人 ！”（TVBS提供）
 </h6>
 <hr>
-	<p>【大纪元2019年08月23日讯】艺人<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E7%91%9E%E8%8E%8E.md#1">瑞莎</a>今年1月正式成为“台客”，是第一个为台湾放弃乌克兰籍的人，前阵子为了要在台湾教<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E9%9F%B5%E5%BE%8B%E4%BD%93%E6%93%8D.md#1">韵律体操</a>，还抛下爱女Nika去海外考国际教练执照。而在中部行医的<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E9%A9%AC%E5%9F%B9%E5%BE%B7.md#1">马培德</a>医生，在持有近五年的永久居留权后，终于也将成为台湾郎。</p>
-<figure id="attachment_11472646" aria-describedby="caption-attachment-11472646" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/08/1908230431291487.jpg"><img class=" wp-image-11472646" title="" src="https://i.epochtimes.com/assets/uploads/2019/08/1908230431291487.jpg" alt="" width="450" b="675" /></a><figcaption id="caption-attachment-11472646" class="wp-caption-text"><ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E9%A9%AC%E5%9F%B9%E5%BE%B7.md#1">马培德</a>医生（中）在台湾中部行医，在台湾持有近五年的永久居留权后，终于也将成为台湾郎。（TVBS提供）</figcaption></figure>
-<p>两人日前上节目接受<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E6%96%B9%E5%BF%B5%E5%8D%8E.md#1">方念华</a>专访，谈及成为“台湾人”的心得，<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E7%91%9E%E8%8E%8E.md#1">瑞莎</a>表示：“刚来的时候我没有喜欢台湾，但在这生活一年后，我真的开始完全离不开台湾！”而台湾浓厚的人情味，也让马培德大感不可思议，还打趣地说：“就连小偷也有人情味，台湾真的很棒！”</p>
+	<p>【大纪元2019年08月23日讯】艺人<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%91%9E%E8%8E%8E.md#1">瑞莎</a>今年1月正式成为“台客”，是第一个为台湾放弃乌克兰籍的人，前阵子为了要在台湾教<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%9F%B5%E5%BE%8B%E4%BD%93%E6%93%8D.md#1">韵律体操</a>，还抛下爱女Nika去海外考国际教练执照。而在中部行医的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%A9%AC%E5%9F%B9%E5%BE%B7.md#1">马培德</a>医生，在持有近五年的永久居留权后，终于也将成为台湾郎。</p>
+<figure id="attachment_11472646" aria-describedby="caption-attachment-11472646" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/08/1908230431291487.jpg"><img class=" wp-image-11472646" title="" src="https://i.epochtimes.com/assets/uploads/2019/08/1908230431291487.jpg" alt="" width="450" b="675" /></a><figcaption id="caption-attachment-11472646" class="wp-caption-text"><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%A9%AC%E5%9F%B9%E5%BE%B7.md#1">马培德</a>医生（中）在台湾中部行医，在台湾持有近五年的永久居留权后，终于也将成为台湾郎。（TVBS提供）</figcaption></figure>
+<p>两人日前上节目接受<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B9%E5%BF%B5%E5%8D%8E.md#1">方念华</a>专访，谈及成为“台湾人”的心得，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%91%9E%E8%8E%8E.md#1">瑞莎</a>表示：“刚来的时候我没有喜欢台湾，但在这生活一年后，我真的开始完全离不开台湾！”而台湾浓厚的人情味，也让马培德大感不可思议，还打趣地说：“就连小偷也有人情味，台湾真的很棒！”</p>
 <p>乌克兰不接受双重国籍，瑞莎申请归化台湾时，已经放弃乌克兰籍，变成无国籍的人。申请过程耗时五年多，连女儿Nika出生，她也还没拿到台湾身份证，她表示：“因为有小朋友了，当下真的有点紧张！”</p>
 <p>由于台湾没有乌克兰代表处，瑞莎每验证一份文件就要飞北京、日本或俄罗斯，前前后后瑞莎至少飞了五十几趟，等待的煎熬，也让她一度沮丧落泪。主持人好奇问道：“是什么原因让你觉得一定要入籍，成为真正的中华民国国人？”</p>
 <p>瑞莎直言：“因为我要当一家人，我不要当客人！”拿到台湾国籍的当下，瑞莎一边大哭一边通知家人这个好消息，热爱台湾的程度让她的老公也傻眼。不过，瑞莎初来台湾时，对台湾的印象其实并不好。</p>
@@ -16,7 +16,7 @@
 <p>对瑞莎而言，台湾人很正面也很善良，就是“他们不会想要利用你，而是想要怎么帮助你”，瑞莎感动地说。而台湾人的热情，也让马培德留下深刻印象。</p>
 <p>有一次他带狗去开刀，回家时把放有手机、文件跟8,000元（台币，下同）的背包遗忘在摩托车上，结果包包被偷走。报案几小时后，有人来按门铃，原来是小偷把包包留在门口。马培德打开背包一看，小偷只拿了4,000元，其他东西都没碰，连一个写着“早日康复”的红包，小偷也原封不动地送回，让马培德大感不可思议。</p>
 <p>除了在今年同时成为台湾人，瑞莎与马培德也都在为培育台湾下一代而努力。目前在中国医药大学教书的马培德，为了准备课堂教材及做研究，钻研了许多文言文的文章，培养出高深的中文造诣，甚至连“黄帝内经”也难不倒他。</p>
-<p>而从三岁开始学<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E9%9F%B5%E5%BE%8B%E4%BD%93%E6%93%8D.md#1">韵律体操</a>，六岁就获得乌克兰冠军的瑞莎，来台湾后也开始关心台湾的韵律体操，甚至到新北市体操馆的社群网站留言，希望可以观摩他们的比赛。虽然在乌克兰已有教体操的经验，不过几个月前带台湾选手参加比赛时，却因为没有教练资格被投诉，让小朋友面临比赛时没有教练的窘境。</p>
+<p>而从三岁开始学<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%9F%B5%E5%BE%8B%E4%BD%93%E6%93%8D.md#1">韵律体操</a>，六岁就获得乌克兰冠军的瑞莎，来台湾后也开始关心台湾的韵律体操，甚至到新北市体操馆的社群网站留言，希望可以观摩他们的比赛。虽然在乌克兰已有教体操的经验，不过几个月前带台湾选手参加比赛时，却因为没有教练资格被投诉，让小朋友面临比赛时没有教练的窘境。</p>
 <figure id="attachment_11472648" aria-describedby="caption-attachment-11472648" style="width: 452px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/08/1908230432161487.jpg"><img class=" wp-image-11472648" title="" src="https://i.epochtimes.com/assets/uploads/2019/08/1908230432161487.jpg" alt="" width="452" b="678" /></a><figcaption id="caption-attachment-11472648" class="wp-caption-text">瑞莎今年1月正式成为“台客”，是第一个为台湾放弃乌克兰籍的人。（TVBS提供）</figcaption></figure>
 <p>为此，瑞莎下定决心去海外考取国际教练，瑞莎说：“那时候每天上课12个小时，然后回饭店做功课3、4个小时，还要写报告，很多内容跟医疗有关，比我想像的还难！”但当看到小朋友开心的眼神，她就知道自己有帮到他们，笑说“这一切也就值得了！”</p>
 <p>正式获得台湾身份后的两人，内心更加踏实，他们认为或许有些人觉得台湾是个鬼岛，但他们却完全不觉得，瑞莎更表示：“台湾人应该多珍惜自己的家。”对他们而言，台湾是一个很棒的国家，也就是因为这样他们才愿意留下来。</p>
@@ -26,41 +26,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/18/7/5/n10538951.md#1">瑞莎响应“欢剧助学” 盼筹失依儿学费</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/19/1/23/n10996426.md#1">5年幽灵人口 瑞莎可领身份证 成为正港台湾人</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/19/1/24/n10997749.md#1">终于可领身份证！ 瑞莎准备好当台湾人</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/19/1/24/n10998783.md#1">瑞莎正式入籍台湾 激动落泪“像做梦一样”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/7/5/n10538951.md#1">瑞莎响应“欢剧助学” 盼筹失依儿学费</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/23/n10996426.md#1">5年幽灵人口 瑞莎可领身份证 成为正港台湾人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/24/n10997749.md#1">终于可领身份证！ 瑞莎准备好当台湾人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/24/n10998783.md#1">瑞莎正式入籍台湾 激动落泪“像做梦一样”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/22/n10994378.md#1" target="_blank">陆文：迫害佛法最终害了自己</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/11/10/n3726603.md#1" target="_blank">【历史回顾】羊城晚报：老少皆炼法轮功</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/19/n10229517.md#1" target="_blank">中共淫乱的前生今世（3）政治局六淫棍</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/30/n7475135.md#1" target="_blank">公安医院院长的晚期胃癌怎么好的？</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/14/n13574787.md#1">古代修炼文化留给人的启示</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13605539.md#1">【财商天下】俄入侵乌克兰 北京被拉下水？</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13605772.md#1">【新闻看点】认定铁链女是小花梅 中共撤拐卖文书</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/26/n13606937.md#1">【马克时空】乌克兰抗俄 刺针、标枪、NLAW导弹立战功</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13605758.md#1">应对俄乌开战 北约反应部队启动 史上首次</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602624.md#1">【更新2.24】美确信普京欲推翻乌现政权</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13603338.md#1">酒店隔离与好友成邻居 舒淇：巧到不能再巧</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13604262.md#1">西恩潘“人在乌克兰” 挺进战地拍入侵纪录片</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/19/n13589665.md#1">“回春操”只要2动作！防老化 让身体变年轻</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602266.md#1">【健康1+1】感染Omicron自救方法</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688712.md#1">【马克时空】2023美军费超中共3倍 核武库全面现代化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/26/n13674661.md#1">自制一碗降糖餐！十大降血糖食物一次看</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/havifh3963/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/havifh3963/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/23/n11472640.htm">花五年终成台湾人 瑞莎、马培德医生畅谈心得</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/23/n11472640.htm">花五年终成台湾人 瑞莎、马培德医生畅谈心得</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/havifh3963/djy/blob/master/gb/19/8/23/n11472640.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/havifh3963/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/havifh3963/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/havifh3963/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/8/23/n11472640.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
